--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.2</version>
+		<version>3.2.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.proyectoFinalDWS</groupId>
@@ -23,8 +23,24 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.session</groupId>-->
+<!--			<artifactId>spring-session-core</artifactId>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.thymeleaf.extras</groupId>-->
+<!--			<artifactId>thymeleaf-extras-springsecurity6</artifactId>-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -36,6 +52,35 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.security</groupId>-->
+<!--			<artifactId>spring-security-test</artifactId>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+				<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
+<!--		<dependency>-->
+<!--		    <groupId>org.webjars</groupId>-->
+<!--		    <artifactId>bootstrap</artifactId>-->
+<!--		    <version>5.3.2</version>-->
+<!--		</dependency>-->
+<!--				 https://mvnrepository.com/artifact/org.webjars.bower/jquery -->
+<!--		<dependency>-->
+<!--		    <groupId>org.webjars.bower</groupId>-->
+<!--		    <artifactId>jquery</artifactId>-->
+<!--		    <version>3.7.1</version>-->
+<!--		</dependency>-->
+<!--				 https://mvnrepository.com/artifact/org.webjars/webjars-locator -->
+<!--		<dependency>-->
+<!--		    <groupId>org.webjars</groupId>-->
+<!--		    <artifactId>webjars-locator</artifactId>-->
+<!--		    <version>0.50</version>-->
+<!--		</dependency>-->
+		
+<!--		<dependency>-->
+<!--        	<groupId>org.springframework.boot</groupId>-->
+<!--        	<artifactId>spring-boot-starter-mail</artifactId>-->
+<!--	    </dependency>-->
+
 	</dependencies>
 
 	<build>
