--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,10 @@
 <!--			<groupId>org.springframework.session</groupId>-->
 <!--			<artifactId>spring-session-core</artifactId>-->
 <!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>org.thymeleaf.extras</groupId>-->
-<!--			<artifactId>thymeleaf-extras-springsecurity6</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -56,30 +56,11 @@
 <!--			<groupId>org.springframework.security</groupId>-->
 <!--			<artifactId>spring-security-test</artifactId>-->
 <!--			<scope>test</scope>-->
-<!--		</dependency>-->
-				<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
-<!--		<dependency>-->
-<!--		    <groupId>org.webjars</groupId>-->
-<!--		    <artifactId>bootstrap</artifactId>-->
-<!--		    <version>5.3.2</version>-->
-<!--		</dependency>-->
-<!--				 https://mvnrepository.com/artifact/org.webjars.bower/jquery -->
-<!--		<dependency>-->
-<!--		    <groupId>org.webjars.bower</groupId>-->
-<!--		    <artifactId>jquery</artifactId>-->
-<!--		    <version>3.7.1</version>-->
-<!--		</dependency>-->
-<!--				 https://mvnrepository.com/artifact/org.webjars/webjars-locator -->
-<!--		<dependency>-->
-<!--		    <groupId>org.webjars</groupId>-->
-<!--		    <artifactId>webjars-locator</artifactId>-->
-<!--		    <version>0.50</version>-->
-<!--		</dependency>-->
-		
-<!--		<dependency>-->
-<!--        	<groupId>org.springframework.boot</groupId>-->
-<!--        	<artifactId>spring-boot-starter-mail</artifactId>-->
-<!--	    </dependency>-->
+<!--		</dependency>-->		
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-mail</artifactId>
+	    </dependency>
 
 	</dependencies>
 
