--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -12,13 +12,13 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.ionos.es
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=suplementoStore@frangallegodorado.es
+spring.mail.password=LentosJavaC23;24/Java&C
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=5000
+#spring.mail.properties.mail.smtp.writetimeout=5000
