--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.connectiontimeout=5000
 #spring.mail.properties.mail.smtp.timeout=5000
 #spring.mail.properties.mail.smtp.writetimeout=5000
+
+# Paypal
+paypal.mode= live
+paypal.client.id=AUMLyjcPSsL5Cv_yNQfC2_wfWPXaLK_UDmNvyI0M4WWND8o-llegOB3EoTneIGbABpvuV3LczMmv1SaI
+paypal.client.secret=EPnopUBlVPtobLGNyIV07YY3-THgRimdU_IhXhmxV9vw7Ti6jlH0Lh7OXVgeFnT9V5yafup8fAmsxqE3
