--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,40 @@
+# JPA
+# Controlador para la conexion a la base de datos
 spring.datasource.driverClassName=org.postgresql.Driver
+# Url de conexion a la base de datos
 spring.datasource.url=jdbc:postgresql://localhost:5432/gestorSuplementos
+# Nombre de usuario de la base de datos
 spring.datasource.username=postgres
+# Password del usuario de la base de datos
 spring.datasource.password=zepxuH-nyzfa5
+# Generacion automatica de DDL (Data Definition Language) por Hibernate
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+# Plataforma de la base de datos utilizada por Hibernate, sirve para indicar que Hibernate genere consultas SQL compatibles con PostgreSQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# Estrategia de generacion del esquema de la base de datos por Hibernate
 # create, create-drop, validate, update
 spring.jpa.hibernate.ddl-auto=update
+
+# Thymeleaf
+# Desactiva el cache de Thymeleaf, esto sirve para hacer cambios inmediatos en las plantillas Thymeleaf
 spring.thymeleaf.cache=false
+# Habilita Thymeleaf
 spring.thymeleaf.enabled=true 
+# Ruta de las plantillas Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
+# Sufijo de las plantillas Thymeleaf
 spring.thymeleaf.suffix=.html
 
+# Mail
 spring.mail.host=smtp.ionos.es
 spring.mail.port=587
 spring.mail.username=suplementoStore@frangallegodorado.es
 spring.mail.password=LentosJavaC23;24/Java&C
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.properties.mail.smtp.starttls.required=true
-#spring.mail.properties.mail.smtp.connectiontimeout=5000
-#spring.mail.properties.mail.smtp.timeout=5000
-#spring.mail.properties.mail.smtp.writetimeout=5000
 
 # Paypal
+# live o sandbox
 paypal.mode= live
 paypal.client.id=AUMLyjcPSsL5Cv_yNQfC2_wfWPXaLK_UDmNvyI0M4WWND8o-llegOB3EoTneIGbABpvuV3LczMmv1SaI
 paypal.client.secret=EPnopUBlVPtobLGNyIV07YY3-THgRimdU_IhXhmxV9vw7Ti6jlH0Lh7OXVgeFnT9V5yafup8fAmsxqE3
