quitado username y password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,8 +28,8 @@ spring.thymeleaf.suffix=.html
 # Mail
 spring.mail.host=smtp.ionos.es
 spring.mail.port=587
-spring.mail.username=suplementoStore@frangallegodorado.es
-spring.mail.password=LentosJavaC23;24/Java&C
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
